--- a/public/portfolios/zion-national-park/cliff-and-pines-zion-national-park.html
+++ b/public/portfolios/zion-national-park/cliff-and-pines-zion-national-park.html
@@ -122,7 +122,7 @@
           <div class="photoNav">
             <p id="photoNavM" class="nav">
 			  <a class="button gallery prev" href="aspiring-pine-zion-national-park.html">❮❮</a>
-              <a class="button gallery next" href="zion-national-park.html">❯❯</a>
+              <a class="button gallery next" href="lone-pine-zion-national-park.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -148,7 +148,7 @@
 
            <p id="photoNavD" class="nav">
 					    <a class="button gallery prev" href="aspiring-pine-zion-national-park.html">❮❮</a>
-              <a class="button gallery next" href="zion-national-park.html">❯❯</a>
+              <a class="button gallery next" href="lone-pine-zion-national-park.html">❯❯</a>
             </p>
  
 
