--- a/public/portfolios/icons-of-agriculture/emergency-use-only-ritzville.html
+++ b/public/portfolios/icons-of-agriculture/emergency-use-only-ritzville.html
@@ -121,8 +121,8 @@
 
           <div class="photoNav">
             <p id="photoNavM" class="nav">
-			  <a class="button gallery prev" href="stacks-and-stairs-delevan.html">❮❮</a>
-              <a class="button gallery next" href="icons-of-agriculture.html">❯❯</a>
+			  <a class="button gallery prev" href="silver-silos-pomeroy.html">❮❮</a>
+              
             </p>
             <div class="image-nav">
               <ul>
@@ -147,8 +147,8 @@
             </p>
 
            <p id="photoNavD" class="nav">
-					    <a class="button gallery prev" href="stacks-and-stairs-delevan.html">❮❮</a>
-              <a class="button gallery next" href="icons-of-agriculture.html">❯❯</a>
+					    <a class="button gallery prev" href="silver-silos-pomeroy.html">❮❮</a>
+              
             </p>
  
 
