--- a/public/portfolios/the-american-west-ii/hillside-oak-and-flowers-monterey.html
+++ b/public/portfolios/the-american-west-ii/hillside-oak-and-flowers-monterey.html
@@ -122,7 +122,7 @@
           <div class="photoNav">
             <p id="photoNavM" class="nav">
 			  <a class="button gallery prev" href="grass-and-willows-sierra-nevada.html">❮❮</a>
-              <a class="button gallery next" href="the-american-west-ii.html">❯❯</a>
+              <a class="button gallery next" href="lightning-white-mountains.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -148,7 +148,7 @@
 
            <p id="photoNavD" class="nav">
 					    <a class="button gallery prev" href="grass-and-willows-sierra-nevada.html">❮❮</a>
-              <a class="button gallery next" href="the-american-west-ii.html">❯❯</a>
+              <a class="button gallery next" href="lightning-white-mountains.html">❯❯</a>
             </p>
  
 
