--- a/public/portfolios/the-american-west/sandstone-tapestry-zion-national-park.html
+++ b/public/portfolios/the-american-west/sandstone-tapestry-zion-national-park.html
@@ -121,8 +121,8 @@
 
           <div class="photoNav">
             <p id="photoNavM" class="nav">
-			  <a class="button gallery prev" href="the-american-west.html">❮❮</a>
-              <a class="button gallery next" href="reflections-11-merced-river-yosemite.html">❯❯</a>
+			  <a class="button gallery prev" href="sand-people-monument-valley.html">❮❮</a>
+              <a class="button gallery next" href="sandstone-tsunami-arizona.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -147,8 +147,8 @@
             </p>
 
            <p id="photoNavD" class="nav">
-					    <a class="button gallery prev" href="the-american-west.html">❮❮</a>
-              <a class="button gallery next" href="reflections-11-merced-river-yosemite.html">❯❯</a>
+					    <a class="button gallery prev" href="sand-people-monument-valley.html">❮❮</a>
+              <a class="button gallery next" href="sandstone-tsunami-arizona.html">❯❯</a>
             </p>
  
 
