--- a/public/portfolios/zion-national-park-watercourse-way/along-the-river-zion-national-park.html
+++ b/public/portfolios/zion-national-park-watercourse-way/along-the-river-zion-national-park.html
@@ -121,7 +121,7 @@
 
           <div class="photoNav">
             <p id="photoNavM" class="nav">
-			  
+			  <a class="button gallery prev" href="reflections-subway-zion-national-park.html">❮❮</a>
               <a class="button gallery next" href="reflections-14-zion-national-park.html">❯❯</a>
             </p>
             <div class="image-nav">
@@ -147,7 +147,7 @@
             </p>
 
            <p id="photoNavD" class="nav">
-					    
+					    <a class="button gallery prev" href="reflections-subway-zion-national-park.html">❮❮</a>
               <a class="button gallery next" href="reflections-14-zion-national-park.html">❯❯</a>
             </p>
  
