--- a/public/portfolios/zion-national-park-autumn/index.html
+++ b/public/portfolios/zion-national-park-autumn/index.html
@@ -245,9 +245,9 @@
     
 
       <div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn/old-and-new-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/old-and-new-zion-national-park.jpg" alt="Old and New">
-          <h4>Old and New</h4>
+        <a href="/portfolios/zion-national-park-autumn/after-the-rain-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/after-the-rain-zion-national-park.jpg" alt="After the Rain">
+          <h4>After the Rain</h4>
         </a>
       </div>
     
