--- a/public/portfolios/zion-national-park-autumn/index.html
+++ b/public/portfolios/zion-national-park-autumn/index.html
@@ -126,8 +126,8 @@
 
       <div class="thumb">
         <a href="/portfolios/zion-national-park-autumn/pink-and-yellow-maple-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/pink-and-yellow-maple-zion-national-park.jpg" alt="Pink and Yellow Maples">
-          <h4>Pink and Yellow Maples</h4>
+          <img src="/assets/photographs/thumbs/pink-and-yellow-maple-zion-national-park.jpg" alt="Pink and Yellow Maple">
+          <h4>Pink and Yellow Maple</h4>
         </a>
       </div>
     
