--- a/public/portfolios/zion-national-park-autumn/pink-and-yellow-maple-zion-national-park.html
+++ b/public/portfolios/zion-national-park-autumn/pink-and-yellow-maple-zion-national-park.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
   <head>
     <meta charset="utf-8">
-    <title>Pink and Yellow Maples - Douglas Vincent Photographic Arts</title>
+    <title>Pink and Yellow Maple - Douglas Vincent Photographic Arts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="referrer" content="origin-when-cross-origin">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
      <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
     <link href="/css/style.css?v={{ now|date('n.j.y.G.i.s') }}" rel="stylesheet" type="text/css" media="screen">
   </head>
-  <body id="Pink and Yellow Maples">
+  <body id="Pink and Yellow Maple">
     
     <div id="top">
   <div id="top-inner">
@@ -114,9 +114,9 @@
       <div class="row">
         <div class="p-main" id="resize">
           <div class="sizing">
-            <img src="/assets/photographs/pink-and-yellow-maple-zion-national-park.jpg" alt="Pink and Yellow Maples" class="photograph photo1 current" data-width="1920" data-height="1600"/>
-            <img src="/assets/photographs/pink-and-yellow-maple-zion-national-park-home.jpg" alt="Pink and Yellow Maples" class="photograph photo2" data-width="1920" data-height="1600"/>
-            <img src="/assets/photographs/pink-and-yellow-maple-zion-national-park-biz.jpg" alt="Pink and Yellow Maples" class="photograph photo3" data-width="1920" data-height="1600"/>
+            <img src="/assets/photographs/pink-and-yellow-maple-zion-national-park.jpg" alt="Pink and Yellow Maple" class="photograph photo1 current" data-width="1280" data-height="1600"/>
+            <img src="/assets/photographs/pink-and-yellow-maple-zion-national-park-home.jpg" alt="Pink and Yellow Maple" class="photograph photo2" data-width="1280" data-height="1600"/>
+            <img src="/assets/photographs/pink-and-yellow-maple-zion-national-park-biz.jpg" alt="Pink and Yellow Maple" class="photograph photo3" data-width="1280" data-height="1600"/>
           </div>
 
           <div class="photoNav">
@@ -136,7 +136,7 @@
 	</div>
 		 <div class="p-side">
           <div class="photo-details">
-            <h2 id="title">Pink and Yellow Maples</h2>
+            <h2 id="title">Pink and Yellow Maple</h2>
             <p class="location">Clear Creek</p>
             <p class="place">Zion's East Side, 2013</p>
             <p><a href="#">Print Type</a>: Pigment Ink</p>
