--- a/public/portfolios/zion-national-park-autumn/index.html
+++ b/public/portfolios/zion-national-park-autumn/index.html
@@ -253,9 +253,9 @@
     
 
       <div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn/old-trunk-and-maples-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/old-trunk-and-maples-zion-national-park.jpg" alt="Old Trunk and Maples">
-          <h4>Old Trunk and Maples</h4>
+        <a href="/portfolios/zion-national-park-autumn/old-and-new-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/old-and-new-zion-national-park.jpg" alt="Old and New">
+          <h4>Old and New</h4>
         </a>
       </div>
     
