--- a/public/portfolios/zion-national-park-autumn/index.html
+++ b/public/portfolios/zion-national-park-autumn/index.html
@@ -269,9 +269,9 @@
     
 
       <div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn/yellow-and-crimson-maples-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/yellow-and-crimson-maples-zion-national-park.jpg" alt="Yellow and Crimson Maples">
-          <h4>Yellow and Crimson Maples</h4>
+        <a href="/portfolios/zion-national-park-autumn/alders-and-maples-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/alders-and-maples-zion-national-park.jpg" alt="Alders and Maples">
+          <h4>Alders and Maples</h4>
         </a>
       </div>
     
