--- a/public/index.html
+++ b/public/index.html
@@ -115,9 +115,7 @@
 		
 	<div class="homecontent" id="featured-hero">
 		
-    <a href="/portfolios/the-american-west/aspen-canopy-crested-butte.html">
-      <img src="/assets/photographs/home/aspen-canopy-crested-butte.jpg" alt="Aspen Canopy at Dusk">
-    </a>
+    <a href="/portfolios/the-american-west/aspen-canopy-crested-butte.html"><img src="/assets/photographs/home/aspen-canopy-crested-butte.jpg" alt="Aspen Canopy at Dusk"></a>
     <h3>Aspen Canopy at Dusk</h3>
     <h4>Crested Butte</h4>
     <p class="collection">Part of the <a href="portfolios/the-american-west/">The American West</a> collection.</p>
@@ -142,23 +140,6 @@
 
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 	<script src="/global/scripts/jquery.touchSwipe.min.js"></script>
-
-	<script>
-		fetch("/global/data/home-featured.json")
-			.then(response => response.json())
-			.then(items => {
-			const f = items[Math.floor(Math.random() * items.length)];
-
-			document.getElementById("featured-hero").innerHTML = `
-				<a href="${f.link}"><img src="${f.image}" alt="${f.alt}"></a>
-				<h3>${f.title}</h3>
-				<h4>${f.location}</h4>
-				<p><a href="/portfolios" class="more">View All Photographs »</a></p>
-			`;
-			})
-			.catch(err => console.error("Error loading featured image:", err));
-</script>
-
 
 	<script type="text/javascript">
 		$(document).ready(function() {
