--- a/public/index.html
+++ b/public/index.html
@@ -114,13 +114,7 @@
 
 		
 	<div class="homecontent" id="featured-hero">
-		
-    <a href="/portfolios/the-american-west/aspen-canopy-crested-butte.html"><img src="/assets/photographs/home/aspen-canopy-crested-butte.jpg" alt="Aspen Canopy at Dusk"></a>
-    <h3>Aspen Canopy at Dusk</h3>
-    <h4>Crested Butte</h4>
-    <p class="collection">Part of the <a href="portfolios/the-american-west/">The American West</a> collection.</p>
-		<p><a href="/portfolios" class="more">View All Photographs »</a></p>
-  
+		{{featured-items}}
 	</div>
 
 </main>
@@ -140,6 +134,16 @@
 
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 	<script src="/global/scripts/jquery.touchSwipe.min.js"></script>
+
+	<script>
+	document.addEventListener("DOMContentLoaded", () => {
+		const items = document.querySelectorAll("#featured-hero .hero-item");
+		if (!items.length) return;
+
+		const pick = items[Math.floor(Math.random() * items.length)];
+		pick.hidden = false;
+	});
+	</script>
 
 	<script type="text/javascript">
 		$(document).ready(function() {
