--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,162 @@
 
 		
 	<div class="homecontent" id="featured-hero">
-		{{featured-items}}
+		
+    <div class="hero-item" hidden>
+      <a href="/portfolios/the-american-west/aspen-canopy-crested-butte.html">
+        <img src="/assets/photographs/home/aspen-canopy-crested-butte.jpg" alt="Aspen Canopy at Dusk">
+      </a>
+      <h3>Aspen Canopy at Dusk</h3>
+      <h4>Crested Butte</h4>
+      <p class="collection">
+        Part of the <a href="/portfolios/the-american-west/">The American West</a> collection.
+      </p>
+      <p><a href="/portfolios" class="more">View All Photographs »</a></p>
+    </div>
+  
+
+    <div class="hero-item" hidden>
+      <a href="/portfolios/zion-national-park/canyon-light-zion-national-park.html">
+        <img src="/assets/photographs/home/canyon-light-zion-national-park.jpg" alt="Canyon Light">
+      </a>
+      <h3>Canyon Light</h3>
+      <h4>Zion National Park</h4>
+      <p class="collection">
+        Part of the <a href="/portfolios/zion-national-park/">Zion National Park</a> collection.
+      </p>
+      <p><a href="/portfolios" class="more">View All Photographs »</a></p>
+    </div>
+  
+
+    <div class="hero-item" hidden>
+      <a href="/portfolios/icons-of-agriculture/clearing-storm-the-palouse.html">
+        <img src="/assets/photographs/home/clearing-storm-the-palouse.jpg" alt="Clearing Storm">
+      </a>
+      <h3>Clearing Storm</h3>
+      <h4>The Palouse</h4>
+      <p class="collection">
+        Part of the <a href="/portfolios/icons-of-agriculture/">Icons of Agriculture</a> collection.
+      </p>
+      <p><a href="/portfolios" class="more">View All Photographs »</a></p>
+    </div>
+  
+
+    <div class="hero-item" hidden>
+      <a href="/portfolios/icons-of-agriculture/electric-cortena.html">
+        <img src="/assets/photographs/home/electric-cortena.jpg" alt="Electric">
+      </a>
+      <h3>Electric</h3>
+      <h4>Sacramento Valley</h4>
+      <p class="collection">
+        Part of the <a href="/portfolios/icons-of-agriculture/">Icons of Agriculture</a> collection.
+      </p>
+      <p><a href="/portfolios" class="more">View All Photographs »</a></p>
+    </div>
+  
+
+    <div class="hero-item" hidden>
+      <a href="/portfolios/icons-of-agriculture-ii/granary-and-moon-walters.html">
+        <img src="/assets/photographs/home/granary-and-moon-walters.jpg" alt="Granary and Moon">
+      </a>
+      <h3>Granary and Moon</h3>
+      <h4>Garfield</h4>
+      <p class="collection">
+        Part of the <a href="/portfolios/icons-of-agriculture-ii/">Icons of Agriculture</a> collection.
+      </p>
+      <p><a href="/portfolios" class="more">View All Photographs »</a></p>
+    </div>
+  
+
+    <div class="hero-item" hidden>
+      <a href="/portfolios/icons-of-agriculture/red-off-white-and-blue-palouse.html">
+        <img src="/assets/photographs/home/red-off-white-and-blue-palouse.jpg" alt="Red, Off White, and Blue">
+      </a>
+      <h3>Red, Off White, and Blue</h3>
+      <h4>Whitman County</h4>
+      <p class="collection">
+        Part of the <a href="/portfolios/icons-of-agriculture/">Icons of Agriculture</a> collection.
+      </p>
+      <p><a href="/portfolios" class="more">View All Photographs »</a></p>
+    </div>
+  
+
+    <div class="hero-item" hidden>
+      <a href="/portfolios/zion-national-park-watercourse-way/reflections-subway-zion-national-park.html">
+        <img src="/assets/photographs/home/reflections-subway-zion-national-park.jpg" alt="Reflections">
+      </a>
+      <h3>Reflections</h3>
+      <h4>North Fork</h4>
+      <p class="collection">
+        Part of the <a href="/portfolios/zion-national-park-watercourse-way/">Zion National Park</a> collection.
+      </p>
+      <p><a href="/portfolios" class="more">View All Photographs »</a></p>
+    </div>
+  
+
+    <div class="hero-item" hidden>
+      <a href="/portfolios/zion-national-park-autumn-ii/solemnity-zion-national-park.html">
+        <img src="/assets/photographs/home/solemnity-zion-national-park.jpg" alt="Solemnity">
+      </a>
+      <h3>Solemnity</h3>
+      <h4>Zion National Park</h4>
+      <p class="collection">
+        Part of the <a href="/portfolios/zion-national-park-autumn-ii/">Zion National Park</a> collection.
+      </p>
+      <p><a href="/portfolios" class="more">View All Photographs »</a></p>
+    </div>
+  
+
+    <div class="hero-item" hidden>
+      <a href="/portfolios/zion-national-park-ancient-sands/the-cosmic-wall-zion-national-park.html">
+        <img src="/assets/photographs/home/the-cosmic-wall-zion-national-park.jpg" alt="The Cosmic Wall">
+      </a>
+      <h3>The Cosmic Wall</h3>
+      <h4>Zion National Park</h4>
+      <p class="collection">
+        Part of the <a href="/portfolios/zion-national-park-ancient-sands/">Zion National Park</a> collection.
+      </p>
+      <p><a href="/portfolios" class="more">View All Photographs »</a></p>
+    </div>
+  
+
+    <div class="hero-item" hidden>
+      <a href="/portfolios/zion-national-park-autumn-ii/twilight-maples-zion-national-park.html">
+        <img src="/assets/photographs/home/twilight-maples-zion-national-park.jpg" alt="Twilight Maples">
+      </a>
+      <h3>Twilight Maples</h3>
+      <h4>Zion National Park</h4>
+      <p class="collection">
+        Part of the <a href="/portfolios/zion-national-park-autumn-ii/">Zion National Park</a> collection.
+      </p>
+      <p><a href="/portfolios" class="more">View All Photographs »</a></p>
+    </div>
+  
+
+    <div class="hero-item" hidden>
+      <a href="/portfolios/icons-of-agriculture-iii/cooperative-davenport.html">
+        <img src="/assets/photographs/home/cooperative-davenport.jpg" alt="Union">
+      </a>
+      <h3>Union</h3>
+      <h4>Lincoln County</h4>
+      <p class="collection">
+        Part of the <a href="/portfolios/icons-of-agriculture-iii/">Icons of Agriculture</a> collection.
+      </p>
+      <p><a href="/portfolios" class="more">View All Photographs »</a></p>
+    </div>
+  
+
+    <div class="hero-item" hidden>
+      <a href="/portfolios/zion-national-park-watercourse-way/velvet-reflections-zion-national-park.html">
+        <img src="/assets/photographs/home/velvet-reflections-zion-national-park.jpg" alt="Velvet Reflections">
+      </a>
+      <h3>Velvet Reflections</h3>
+      <h4>Zion National Park</h4>
+      <p class="collection">
+        Part of the <a href="/portfolios/zion-national-park-watercourse-way/">Zion National Park</a> collection.
+      </p>
+      <p><a href="/portfolios" class="more">View All Photographs »</a></p>
+    </div>
+  
 	</div>
 
 </main>
