--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
   <head>
     <meta charset="utf-8">
-    <title>{{title}} - Douglas Vincent Photographic Arts</title>
+    <title>Douglas Vincent Photographic Arts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="referrer" content="origin-when-cross-origin">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
      <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
     <link href="/css/style.css" rel="stylesheet" type="text/css" media="screen">
   </head>
-  <body id="{{body-id}}">
+  <body id="home">
     
 <div id="top">
   <div id="top-inner">
@@ -117,10 +117,10 @@
 		
     <div class="hero-item" hidden>
       <a href="/portfolios/the-american-west/aspen-canopy-crested-butte.html">
-        <img src="/assets/photographs/home/aspen-canopy-crested-butte.jpg" alt="Aspen Canopy at Dusk">
+        <img src="/assets/photographs/aspen-canopy-crested-butte.jpg" alt="Aspen Canopy at Dusk">
       </a>
       <h3>Aspen Canopy at Dusk</h3>
-      <h4>Crested Butte</h4>
+      <h4>Crested Butte, Kebler Pass</h4>
       <p class="collection">
         Part of the <a href="/portfolios/the-american-west/">The American West</a> collection.
       </p>
@@ -130,10 +130,10 @@
 
     <div class="hero-item" hidden>
       <a href="/portfolios/zion-national-park/canyon-light-zion-national-park.html">
-        <img src="/assets/photographs/home/canyon-light-zion-national-park.jpg" alt="Canyon Light">
+        <img src="/assets/photographs/canyon-light-zion-national-park.jpg" alt="Canyon Light">
       </a>
       <h3>Canyon Light</h3>
-      <h4>Zion National Park</h4>
+      <h4>Zion National Park, Echo Canyon</h4>
       <p class="collection">
         Part of the <a href="/portfolios/zion-national-park/">Zion National Park</a> collection.
       </p>
@@ -143,10 +143,10 @@
 
     <div class="hero-item" hidden>
       <a href="/portfolios/icons-of-agriculture/clearing-storm-the-palouse.html">
-        <img src="/assets/photographs/home/clearing-storm-the-palouse.jpg" alt="Clearing Storm">
+        <img src="/assets/photographs/clearing-storm-the-palouse.jpg" alt="Clearing Storm">
       </a>
       <h3>Clearing Storm</h3>
-      <h4>The Palouse</h4>
+      <h4>The Palouse, Lion's Ferry Road</h4>
       <p class="collection">
         Part of the <a href="/portfolios/icons-of-agriculture/">Icons of Agriculture</a> collection.
       </p>
@@ -156,10 +156,10 @@
 
     <div class="hero-item" hidden>
       <a href="/portfolios/icons-of-agriculture/electric-cortena.html">
-        <img src="/assets/photographs/home/electric-cortena.jpg" alt="Electric">
+        <img src="/assets/photographs/electric-cortena.jpg" alt="Electric">
       </a>
       <h3>Electric</h3>
-      <h4>Sacramento Valley</h4>
+      <h4>Sacramento Valley, Cortena</h4>
       <p class="collection">
         Part of the <a href="/portfolios/icons-of-agriculture/">Icons of Agriculture</a> collection.
       </p>
@@ -169,10 +169,10 @@
 
     <div class="hero-item" hidden>
       <a href="/portfolios/icons-of-agriculture-ii/granary-and-moon-walters.html">
-        <img src="/assets/photographs/home/granary-and-moon-walters.jpg" alt="Granary and Moon">
+        <img src="/assets/photographs/granary-and-moon-walters.jpg" alt="Granary and Moon">
       </a>
       <h3>Granary and Moon</h3>
-      <h4>Garfield</h4>
+      <h4>Garfield, Walters Road</h4>
       <p class="collection">
         Part of the <a href="/portfolios/icons-of-agriculture-ii/">Icons of Agriculture</a> collection.
       </p>
@@ -182,10 +182,10 @@
 
     <div class="hero-item" hidden>
       <a href="/portfolios/icons-of-agriculture/red-off-white-and-blue-palouse.html">
-        <img src="/assets/photographs/home/red-off-white-and-blue-palouse.jpg" alt="Red, Off White, and Blue">
+        <img src="/assets/photographs/red-off-white-and-blue-palouse.jpg" alt="Red, Off White, and Blue">
       </a>
       <h3>Red, Off White, and Blue</h3>
-      <h4>Whitman County</h4>
+      <h4>Whitman County, Palouse City</h4>
       <p class="collection">
         Part of the <a href="/portfolios/icons-of-agriculture/">Icons of Agriculture</a> collection.
       </p>
@@ -195,10 +195,10 @@
 
     <div class="hero-item" hidden>
       <a href="/portfolios/zion-national-park-watercourse-way/reflections-subway-zion-national-park.html">
-        <img src="/assets/photographs/home/reflections-subway-zion-national-park.jpg" alt="Reflections">
+        <img src="/assets/photographs/reflections-subway-zion-national-park.jpg" alt="Reflections">
       </a>
       <h3>Reflections</h3>
-      <h4>North Fork</h4>
+      <h4>North Fork, The Subway</h4>
       <p class="collection">
         Part of the <a href="/portfolios/zion-national-park-watercourse-way/">Zion National Park</a> collection.
       </p>
@@ -208,10 +208,10 @@
 
     <div class="hero-item" hidden>
       <a href="/portfolios/zion-national-park-autumn-ii/solemnity-zion-national-park.html">
-        <img src="/assets/photographs/home/solemnity-zion-national-park.jpg" alt="Solemnity">
+        <img src="/assets/photographs/solemnity-zion-national-park.jpg" alt="Solemnity">
       </a>
       <h3>Solemnity</h3>
-      <h4>Zion National Park</h4>
+      <h4>Zion National Park, Temple of Sinawava</h4>
       <p class="collection">
         Part of the <a href="/portfolios/zion-national-park-autumn-ii/">Zion National Park</a> collection.
       </p>
@@ -221,10 +221,10 @@
 
     <div class="hero-item" hidden>
       <a href="/portfolios/zion-national-park-ancient-sands/the-cosmic-wall-zion-national-park.html">
-        <img src="/assets/photographs/home/the-cosmic-wall-zion-national-park.jpg" alt="The Cosmic Wall">
+        <img src="/assets/photographs/the-cosmic-wall-zion-national-park.jpg" alt="The Cosmic Wall">
       </a>
       <h3>The Cosmic Wall</h3>
-      <h4>Zion National Park</h4>
+      <h4>Zion National Park, Clear Creek</h4>
       <p class="collection">
         Part of the <a href="/portfolios/zion-national-park-ancient-sands/">Zion National Park</a> collection.
       </p>
@@ -234,10 +234,10 @@
 
     <div class="hero-item" hidden>
       <a href="/portfolios/zion-national-park-autumn-ii/twilight-maples-zion-national-park.html">
-        <img src="/assets/photographs/home/twilight-maples-zion-national-park.jpg" alt="Twilight Maples">
+        <img src="/assets/photographs/twilight-maples-zion-national-park.jpg" alt="Twilight Maples">
       </a>
       <h3>Twilight Maples</h3>
-      <h4>Zion National Park</h4>
+      <h4>Zion National Park, Clear Creek</h4>
       <p class="collection">
         Part of the <a href="/portfolios/zion-national-park-autumn-ii/">Zion National Park</a> collection.
       </p>
@@ -247,10 +247,10 @@
 
     <div class="hero-item" hidden>
       <a href="/portfolios/icons-of-agriculture-iii/cooperative-davenport.html">
-        <img src="/assets/photographs/home/cooperative-davenport.jpg" alt="Union">
+        <img src="/assets/photographs/cooperative-davenport.jpg" alt="Union">
       </a>
       <h3>Union</h3>
-      <h4>Lincoln County</h4>
+      <h4>Lincoln County, Davenport</h4>
       <p class="collection">
         Part of the <a href="/portfolios/icons-of-agriculture-iii/">Icons of Agriculture</a> collection.
       </p>
@@ -260,10 +260,10 @@
 
     <div class="hero-item" hidden>
       <a href="/portfolios/zion-national-park-watercourse-way/velvet-reflections-zion-national-park.html">
-        <img src="/assets/photographs/home/velvet-reflections-zion-national-park.jpg" alt="Velvet Reflections">
+        <img src="/assets/photographs/velvet-reflections-zion-national-park.jpg" alt="Velvet Reflections">
       </a>
       <h3>Velvet Reflections</h3>
-      <h4>Zion National Park</h4>
+      <h4>Zion National Park, Virgin River</h4>
       <p class="collection">
         Part of the <a href="/portfolios/zion-national-park-watercourse-way/">Zion National Park</a> collection.
       </p>
