--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
         <img src="/assets/photographs/aspen-canopy-crested-butte.jpg" alt="Aspen Canopy at Dusk">
       </a>
       <h3>Aspen Canopy at Dusk</h3>
-      <h4>Crested Butte, Kebler Pass</h4>
+      <h4>Kebler Pass, Crested Butte</h4>
       <p class="collection">
         Part of the <a href="/portfolios/the-american-west/">The American West</a> collection.
       </p>
@@ -133,7 +133,7 @@
         <img src="/assets/photographs/canyon-light-zion-national-park.jpg" alt="Canyon Light">
       </a>
       <h3>Canyon Light</h3>
-      <h4>Zion National Park, Echo Canyon</h4>
+      <h4>Echo Canyon, Zion National Park</h4>
       <p class="collection">
         Part of the <a href="/portfolios/zion-national-park/">Zion National Park</a> collection.
       </p>
@@ -146,7 +146,7 @@
         <img src="/assets/photographs/clearing-storm-the-palouse.jpg" alt="Clearing Storm">
       </a>
       <h3>Clearing Storm</h3>
-      <h4>The Palouse, Lion's Ferry Road</h4>
+      <h4>Lion's Ferry Road, The Palouse</h4>
       <p class="collection">
         Part of the <a href="/portfolios/icons-of-agriculture/">Icons of Agriculture</a> collection.
       </p>
@@ -159,7 +159,7 @@
         <img src="/assets/photographs/electric-cortena.jpg" alt="Electric">
       </a>
       <h3>Electric</h3>
-      <h4>Sacramento Valley, Cortena</h4>
+      <h4>Cortena, Sacramento Valley</h4>
       <p class="collection">
         Part of the <a href="/portfolios/icons-of-agriculture/">Icons of Agriculture</a> collection.
       </p>
@@ -172,7 +172,7 @@
         <img src="/assets/photographs/granary-and-moon-walters.jpg" alt="Granary and Moon">
       </a>
       <h3>Granary and Moon</h3>
-      <h4>Garfield, Walters Road</h4>
+      <h4>Walters Road, Garfield</h4>
       <p class="collection">
         Part of the <a href="/portfolios/icons-of-agriculture-ii/">Icons of Agriculture</a> collection.
       </p>
@@ -185,7 +185,7 @@
         <img src="/assets/photographs/red-off-white-and-blue-palouse.jpg" alt="Red, Off White, and Blue">
       </a>
       <h3>Red, Off White, and Blue</h3>
-      <h4>Whitman County, Palouse City</h4>
+      <h4>Palouse City, Whitman County</h4>
       <p class="collection">
         Part of the <a href="/portfolios/icons-of-agriculture/">Icons of Agriculture</a> collection.
       </p>
@@ -198,7 +198,7 @@
         <img src="/assets/photographs/reflections-subway-zion-national-park.jpg" alt="Reflections">
       </a>
       <h3>Reflections</h3>
-      <h4>North Fork, The Subway</h4>
+      <h4>The Subway, North Fork</h4>
       <p class="collection">
         Part of the <a href="/portfolios/zion-national-park-watercourse-way/">Zion National Park</a> collection.
       </p>
@@ -211,7 +211,7 @@
         <img src="/assets/photographs/solemnity-zion-national-park.jpg" alt="Solemnity">
       </a>
       <h3>Solemnity</h3>
-      <h4>Zion National Park, Temple of Sinawava</h4>
+      <h4>Temple of Sinawava, Zion National Park</h4>
       <p class="collection">
         Part of the <a href="/portfolios/zion-national-park-autumn-ii/">Zion National Park</a> collection.
       </p>
@@ -224,7 +224,7 @@
         <img src="/assets/photographs/the-cosmic-wall-zion-national-park.jpg" alt="The Cosmic Wall">
       </a>
       <h3>The Cosmic Wall</h3>
-      <h4>Zion National Park, Clear Creek</h4>
+      <h4>Clear Creek, Zion National Park</h4>
       <p class="collection">
         Part of the <a href="/portfolios/zion-national-park-ancient-sands/">Zion National Park</a> collection.
       </p>
@@ -237,7 +237,7 @@
         <img src="/assets/photographs/twilight-maples-zion-national-park.jpg" alt="Twilight Maples">
       </a>
       <h3>Twilight Maples</h3>
-      <h4>Zion National Park, Clear Creek</h4>
+      <h4>Clear Creek, Zion National Park</h4>
       <p class="collection">
         Part of the <a href="/portfolios/zion-national-park-autumn-ii/">Zion National Park</a> collection.
       </p>
@@ -250,7 +250,7 @@
         <img src="/assets/photographs/cooperative-davenport.jpg" alt="Union">
       </a>
       <h3>Union</h3>
-      <h4>Lincoln County, Davenport</h4>
+      <h4>Davenport, Lincoln County</h4>
       <p class="collection">
         Part of the <a href="/portfolios/icons-of-agriculture-iii/">Icons of Agriculture</a> collection.
       </p>
@@ -263,7 +263,7 @@
         <img src="/assets/photographs/velvet-reflections-zion-national-park.jpg" alt="Velvet Reflections">
       </a>
       <h3>Velvet Reflections</h3>
-      <h4>Zion National Park, Virgin River</h4>
+      <h4>Virgin River, Zion National Park</h4>
       <p class="collection">
         Part of the <a href="/portfolios/zion-national-park-watercourse-way/">Zion National Park</a> collection.
       </p>
