--- a/public/portfolios/polaroid-type-52/index.html
+++ b/public/portfolios/polaroid-type-52/index.html
@@ -111,7 +111,7 @@
   <main id="main" class="section">
     <h1>Polaroid Type 52</h1>
     <div class="port-intro">
-      <p>Polaroid Type 52 introduction TBD.</p>
+      <p>Polaroid Type 52 images coming soon.</p>
     </div>
     <div class="row">
       <div id="thumbs">
